<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.DataFragment"
        android:id="@+id/ConstraintLayout" >

    <Switch
        android:id="@+id/nickSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:checked="true"
        android:minHeight="48dp"
        android:text="@string/nickname"
        android:textColor="@color/purple_200"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nicknameDataTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/usernameSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:allowUndo="false"
        android:checked="true"
        android:minHeight="48dp"
        android:text="@string/username"
        android:textColor="@color/purple_200"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/usernameDataTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
            android:text="@string/nickname"
            android:layout_width="321dp"
            android:layout_height="52dp"
            android:id="@+id/nicknameDataTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginBottom="27dp"
            app:layout_constraintBottom_toTopOf="@+id/dataFetchProgressBar" />

    <TextView
        android:id="@+id/emailDataTextView"
        android:layout_width="321dp"
        android:layout_height="52dp"
        android:layout_marginBottom="8dp"
        android:text="@string/email"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/nickSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/usernameDataTextView"
        android:layout_width="321dp"
        android:layout_height="52dp"
        android:layout_marginBottom="4dp"
        android:text="@string/username"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/emailSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="144dp"
        android:layout_height="57dp"
        android:layout_marginBottom="16dp"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/refreshDataButton"
        android:layout_width="144dp"
        android:layout_height="57dp"
        android:layout_marginBottom="32dp"
        android:text="@string/refresh"
        app:layout_constraintBottom_toTopOf="@+id/logoutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="93dp"
            android:layout_height="85dp"
            android:id="@+id/dataFetchProgressBar"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/refreshDataButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:indeterminate="true"
            tools:visibility="visible"
            android:visibility="invisible" />

    <Switch
        android:id="@+id/emailSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:minHeight="48dp"
        android:text="@string/email"
        android:textColor="@color/purple_200"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/emailDataTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>